Adding more consistancy to officers page + fixing issue template

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -24,9 +24,8 @@
        </div>
       <div class="card__text">
        Year - Senior<br>
-       Length of Service - 3 Years<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM General, SIG-Security
+       Involvement - SIG-Security
       </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/eric-michalak-400907137/"
@@ -48,9 +47,8 @@
       </div>
       <div class="card__text">
        Year - Sophomore<br>
-       Length of Service - 1 Years<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM General, SIG-Game
+       Involvement - SIG-Game
       </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/henrycwong"
@@ -68,14 +66,13 @@
      <div class="card__content">
        <div class="card_heading">
         <h3 class="card__name">Katrina Ward</h3>
-        <h5 class="card__titles">ACM-W President</h5>
         <h5 class="card__titles">Treasurer</h5>
+        <h5 class="card__titles">ACM-W President</h5>
       </div>
       <div class="card__text">
        Year - PhD<br>
-       Length of Service - 7 Years<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM General, ACM-W
+       Involvement - ACM-W
       </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/katrina-ward-57131575/"
@@ -97,9 +94,8 @@
        </div>
       <div class="card__text">
        Year - Junior<br>
-       Length of Service - 0 Years<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM General, SIG-Comp
+       Involvement - SIG-Competition
       </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/sara-newman-bb2803128/"
@@ -121,9 +117,8 @@
        </div>
       <div class="card__text">
        Year - Senior<br>
-       Length of Service - 1 Year<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM General, SIG-Security, SIG-Competition
+       Involvement - SIG-Competition, SIG-Security
       </div>
       <div class="card__links">
         <a href="https://www.linkedin.com/in/adam-evans-626408a8/"
@@ -147,8 +142,7 @@
         </div>
         <div class="card__text">
           Year - Senior<br>
-          Length of Service - 0 Year<br>
-          SIG - ACM-General, SIG-Comp
+          Involvement - SIG-Competition
         </div>
       <div class="card__links">
        <!--<a href="https://www.linkedin.com/in/schoonoverkevin/"
@@ -170,8 +164,7 @@
         </div>
         <div class="card__text">
           Year - Sophomore<br>
-          Length of Service - 1 Year<br>
-          SIG - SIG.com, ACM-General
+          Involvement - SIG.com
         </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/schoonoverkevin/"
@@ -193,8 +186,7 @@
         </div>
         <div class="card__text">
           Year - Senior<br>
-          Length of Service - 0 Year<br>
-          SIG - ACM-General, SIG-Comp
+          SIG - SIG-Game
         </div>
       <div class="card__links">
        <!--<a href="https://www.linkedin.com/in/schoonoverkevin/"
@@ -215,9 +207,8 @@
       </div>
       <div class="card__text">
        Year - Sophomore<br>
-       Length of Service - 1 Years<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM General, SIG-Lounge, SIG-Game
+       Involvement - SIG-Game, SIG-Lounge
       </div>
       <div class="card__links">
        <!--<a href="https://www.linkedin.com/in/eric-michalak-400907137/"
