--- a/ACM_General/home/templates/home/sigs.html
+++ b/ACM_General/home/templates/home/sigs.html
@@ -18,12 +18,12 @@
                  style="background-image: url({% static "home/img/sigs/sigdotcom-logo.png" %});"></div>
               <h5 class="card__title">SIG.com</h5>
               </a>
-              <p class="card__text">Interested in software engineering, web 
-              development, or development operations? In SIG.com, we attempt to 
-              build production-grade websites using software engineering skills 
-              and development patterns with weekly development meetings. 
-              Currently, SIG.com is developing the https://acm.mst.edu/ 
-              website. Moreover, we host workshops on various foundational 
+              <p class="card__text">Interested in software engineering, web
+              development, or development operations? In SIG.com, we attempt to
+              build production-grade websites using software engineering skills
+              and development patterns with weekly development meetings.
+              Currently, SIG.com is developing the https://acm.mst.edu/
+              website. Moreover, we host workshops on various foundational
               skills such as Python, Git, HTML, CSS, and many others.</p>
               <a href="https://discord.gg/eKtkR4k" class="card__discord-link">Discord</a>
         </li>
@@ -33,29 +33,14 @@
                  style="background-image: url({% static "home/img/sigs/sigcomp-logo.svg" %}); background-size: contain;"></div>
               <h5 class="card__title">SIG-Competition</h5>
               </a>
-              <p class="card__text">SIG Competition is a special interest group 
-              within Missouri S&T’s ACM that focuses primarily on competitive 
-              programming. With weekly lectures from Dr. Morales we tackle 
-              challenge problems from many online judge websites such as Kattis 
+              <p class="card__text">SIG Competition is a special interest group
+              within Missouri S&T’s ACM that focuses primarily on competitive
+              programming. With weekly lectures from Dr. Morales we tackle
+              challenge problems from many online judge websites such as Kattis
               (https://open.kattis.com/) and UVA (https://uva.onlinejudge.org/).
-              We also hold our own programming contests on campus where people 
+              We also hold our own programming contests on campus where people
               can win the admiration of their peers and some great prizes.</p>
               <a href="https://discord.gg/ayjGE9t" class="card__discord-link">Discord</a>
-        </li>
-        <li class="cards__card">
-            <a href="https://acmsigsec.mst.edu/" class="card__link">
-              <div class="card__image contain"
-                 style="background-image: url({% static "home/img/sigs/sigsec-logo.png" %}); background-size: contain;"></div>
-              <h5 class="card__title">SIG-Security</h5>
-          </a>
-              <p class="card__text">Our ACM Special Interest Group on Security 
-              is a local ACM branch whose mission is to help develop the 
-              cybersecurity profession for the student body of Missouri 
-              University of Science and Technology by sponsoring high-quality 
-              workshops and lectures from both local and national industry 
-              professionals, as well as hosting on campus security events and 
-              competitions.</p>
-              <a href="https://discord.gg/w4x3JMc" class="card__discord-link">Discord</a>
         </li>
         <li class="cards__card">
             <a href="http://siggame.io/" class="card__link">
@@ -75,6 +60,21 @@
               developer. We accept new members of all skill levels and majors,
               so don't hesitate to contact us.</p>
               <a href="https://discord.gg/Fbg4rwk" class="card__discord-link">Discord</a>
+        </li>
+        <li class="cards__card">
+            <a href="http://acmsigsec.mst.edu/" class="card__link">
+            <div class="card__image contain"
+              style="background-image: url({% static "home/img/sigs/sigsec-logo.png" %}); background-size: contain;"></div>
+            <h5 class="card__title">SIG-Security</h5>
+            </a>
+            <p class="class__text">Our ACM Special Interest Group on Security
+            is a local ACM branch whose mission is to help develop the
+            cybersecurity profession for the student body of Missouri
+            University of Science and Technology by sponsoring high-quality
+            workshops and lectures from both local and natinal industry
+            professionals, as well as hosting on campus security events and
+            competitions. </p>
+            <a href="https://discord.gg/w4x3JMc" class="card__discord-link">Discord</a>
         </li>
       </ul>
     </div>
