--- a/ACM_General/home/static/home/scss/membership.scss
+++ b/ACM_General/home/static/home/scss/membership.scss
@@ -19,12 +19,35 @@ hr {
     -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-bottom: 60px;
+  justify-content: space-evenly;
 }
 .perks__perk {
-  width: 33.333333333333%;
+  width: 100%;
+  justify-content: space-evenly;
+}
+.perks__perk img {
+  filter: invert(100%);
+  margin: 20px auto 0 auto;
+  display: block;
+  }
+.perks__content {
+  margin: -24px 50px 0 50px;
+  border: 2px solid lightgrey;
+  height: 300px;
+}
+.perks__perk hr {
+  width: 90px;
+  margin: 5px auto;
 }
 .perks__title {
-  font-size: 1.1rem;
+  font-size: 1.8rem;
+  text-align: center;
+  margin: 50px 0 5px 0;
+}
+.perks__description {
+  margin: 20px 30px 0 30px;
+  text-align: center;
+  font-size: 1.4rem;
 }
 .perks__details-link {
   font-size: .9rem;
@@ -125,43 +148,4 @@ hr {
 .spice-link {
   color: #76d3ab;
   font-weight: bold;
-}
-
-@media (max-width: 641px) { /*SMARTPHONE*/
-  .perks {
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .perks__perk {
-    margin: auto;
-    width: 70%;
-    margin-bottom: 20px;
-  }
-  .perks__title {
-    font-size: 1.8rem;
-    margin:  0 0 15px 0;
-  }
-  .perks__perk:nth-of-type(even) {
-    text-align: right;
-  }
-  .perks__details-link {
-    font-size: 1.3rem;
-  }
-  
-  .pay-area {
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-}
-
-@media (max-width: 1090px) {
-  .perks {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
 }
