--- a/ACM_General/home/templates/home/membership-old.html
+++ b/ACM_General/home/templates/home/membership-old.html
@@ -43,19 +43,6 @@
           <h1 class="pay-area__title">Semester</h1>
           <div class="pay-area__price">11</div>
           <div class="pay-area__disclaimer">all perks are included</div>
-<form action="{% url 'payments:product-handler' 2000 %}" method="POST">
-              {% csrf_token %}
-              <script
-              src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-              data-key="{{ stripe_public_key }}"
-              data-amount="2000"
-              data-name="Missouri S&amp;T - Association of Computing Machinery"
-              data-description="Widget"
-              data-image="{% static 'home/img/acm.png' %}"
-              data-locale="auto">
-              </script>
-          </form>
-
           <form id="semester-button" class="acm-btn pay-area__btn pay-area__btn--semester" action="{% url 'payments:product-handler' 1100 %}" method="POST">
             {% csrf_token %}
             Buy Semester
@@ -66,17 +53,9 @@
           <h1 class="pay-area__title">Year</h1>
           <div class="pay-area__price">20</div>
           <div class="pay-area__disclaimer">all perks are included</div>
-          <form action="{% url 'payments:product-handler' '49b4e1a8-ac73-11e7-9f1c-d7200570e0dd' %}" method="POST">
-              {% csrf_token %}
-              <script
-              src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-              data-key="{{ stripe_public_key }}"
-              data-amount="2000"
-              data-name="Missouri S&amp;T - Association of Computing Machinery"
-              data-description="Widget"
-              data-image="{% static 'home/img/acm.png' %}"
-              data-locale="auto">
-              </script>
+          <form id="year-button" class="acm-btn pay-area__btn pay-area__btn--year" action="{% url 'payments:product-handler' 1100 %}" method="POST">
+            {% csrf_token %}
+            Buy Year
           </form>
         </div>
       </div>
