--- a/ACM_General/payments/templates/payments/payment.html
+++ b/ACM_General/payments/templates/payments/payment.html
@@ -21,7 +21,7 @@
           {% csrf_token %}
           <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="pk_test_0FfWE5qxj6yqPUHQU1noRevQ"
+          data-key="{{ stripe_public_key }}"
           data-amount="1100"
           data-name="Missouri S&amp;T - Association of Computing Machinery"
           data-description="Widget"
@@ -36,7 +36,7 @@
           {% csrf_token %}
           <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="pk_test_0FfWE5qxj6yqPUHQU1noRevQ"
+          data-key="{{ stripe_public_key }}"
           data-amount="2000"
           data-name="Missouri S&amp;T - Association of Computing Machinery"
           data-description="Widget"
