--- a/ACM_General/home/static/home/scss/membership.scss
+++ b/ACM_General/home/static/home/scss/membership.scss
@@ -8,7 +8,6 @@ hr {
   height: 3px;
   background-color: #76d3ab;
   border: none;
-  margin-bottom: 40px;
 }
 
 .perks {
@@ -17,23 +16,28 @@ hr {
   display: flex;
   -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   margin-bottom: 60px;
   justify-content: space-evenly;
+  flex-direction: column;
 }
 .perks__perk {
   width: 100%;
   justify-content: space-evenly;
+  max-width: 275px;
+  display: block;
+  margin: auto;
 }
 .perks__perk img {
-  filter: invert(100%);
   margin: 20px auto 0 auto;
   display: block;
+  height: 72px;
+  width: 72px;
   }
 .perks__content {
-  margin: -24px 50px 0 50px;
+  margin: -36px 10px 0 10px;
   border: 2px solid lightgrey;
-  height: 300px;
+  height: 275px;
 }
 .perks__perk hr {
   width: 90px;
@@ -56,7 +60,7 @@ hr {
 
 .pay-area {
   width: 100%;
-  margin: 0 auto;
+  margin: 56px auto 0 auto;
   padding-bottom: 50px;
   display: -ms-flexbox;
     display: -webkit-flex;
@@ -64,6 +68,8 @@ hr {
   -webkit-justify-content: center;
     -ms-flex-pack: center;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .pay-area__spacer {
   width: 10%;
@@ -149,3 +155,15 @@ hr {
   color: #76d3ab;
   font-weight: bold;
 }
+
+@media (min-width: 750px) {
+  .perks__perk {
+  }
+  .perks {
+    flex-direction: row;
+  }
+  .pay-area {
+    flex-direction: row;
+  }
+}
+
