--- a/ACM_General/home/templates/home/membership.html
+++ b/ACM_General/home/templates/home/membership.html
@@ -43,7 +43,7 @@
           <h1 class="pay-area__title">Semester</h1>
           <div class="pay-area__price">11</div>
           <div class="pay-area__disclaimer">all perks are included</div>
-<form action="{% url 'payments:product-handler' 2000 %}" method="POST">
+          <form action="{% url 'payments:product-handler' 'membership-semester' %}" method="POST">
               {% csrf_token %}
               <script
               src="https://checkout.stripe.com/checkout.js" class="stripe-button"
@@ -131,6 +131,7 @@
               token: function(token) {
                 // You can access the token ID with `token.id`.
                 // Get the token ID to your server-side code for use.
+                console.log(token)
               }
             });
 
