--- a/ACM_General/home/static/home/scss/main.scss
+++ b/ACM_General/home/static/home/scss/main.scss
@@ -79,6 +79,10 @@ textarea {
   resize: vertical;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* =========================================================================
  * Browser Upgrade Prompt
  * ========================================================================= */
@@ -424,54 +428,71 @@ main {
  * ========================================================================= */
 
 footer {
-  height: 220px;
-  -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
-  -ms-flex-align: center;
-  align-items: center;
+  height: 250px;
+  padding-bottom: 50px;
   background-color: #373C3F;
+  position: relative;
+}
+
+.footer-wrapper {
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  //-ms-flex-align: center;
+  //align-items: center;
+  justify-content: space-between;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 36px 10px 0 10px;
+}
+
+.footer-wrapper ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.footer-wrapper ul h3, .footer-wrapper ul h4, .footer-wrapper ul h4 a {
+  color: #76d3ab;
+  margin: 0 0 14px 0;
+}
+
+.footer-wrapper ul h4 a:hover {
+  text-decoration: underline;
+}
+
+.footer-wrapper ul li a {
+  color: rgba(255,255,255,0.6);
+  font-size: .94em;
+  font-weight: bold;
+  transition: color .14s ease-in-out;
+}
+
+.footer-wrapper ul li a:hover {
+  color: rgba(255,255,255,0.8);
+  font-size: .94em;
+  font-weight: bold;
+}
+
+.footer-wrapper ul li {
+  margin-bottom: 3px;
 }
 
 footer img {
-  margin: 5px 0;
-  max-height: 100px;
-  height: auto;
-  width: auto;
-}
-
-.footer-nav {
-  height: 60px;
-  width: 100%;
-  white-space: nowrap;
-  flex-wrap: wrap;
-  display: -ms-flexbox;
-display: -webkit-flex;
-display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer-nav a {
-  margin: 0 2%;
-  font-size: 14px;
-  text-decoration: none;
-  color: rgba(255,255,255,.8);
-  transition: color .25s;
-}
-.footer-nav a:hover {
-  color: rgba(255,255,255,1);
+  height: 170px;
 }
 
 footer h5 {
-  color: rgba(255,255,255,.6);
-  font-size: 14px;
-  font-weight: normal;
+  color: rgba(255,255,255,0.4);
+  margin: 0 0 10px 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 /* ==========================================================================
@@ -572,16 +593,31 @@ footer h5 {
 /*!*smartphones, iPhone, portrait 480x320 phones *!*/
 /*}*/
 
-@media (max-width: 414px) {
+@media (max-width: 554px) {
   /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
   footer {
-    height: 110px;
-    padding-top: 15px;
+    height: auto;
+  }
+  
+  .footer-wrapper {
+    flex-direction: column;
+  }
+
+  .footer-wrapper ul {
+    padding: 0 20%;
+    margin-top: 10px;
+    list-style: disc;
+  }
+
+  .footer-wrapper ul h4 {
+    text-align: center;
   }
 
   footer img {
-    display: none;
+    margin: 0 auto;
+    display: block;
   }
+  
 }
 
 @media (max-width: 750px) {
@@ -621,6 +657,8 @@ footer h5 {
     top: -12px;
     border-top: solid 4px #2da1d8;
   }
+  
+  
 }
 
 /*@media (max-width:961px)  { !* tablet, landscape iPad, low-res laptops ands desktops *! }*/
