--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -7,6 +7,36 @@
 
 {% block body_content %}	
   <main>
+    <div class="content-wrapper">
+      <div class="about-section">
+        <div class="about-section-title">
+          <h2>About Missouri S&T ACM</h2>
+        </div>
+        <div class="about-section-content">
+          <div class="about-section-box">
+            <h4>Mission</h4>
+            <p>The mission of Missouri S&T ACM is to fill out this box so that
+              there is actually content here. If you are filling out content here
+              , thank you. You are contributing to the success of this organization.
+            </p>
+          </div>
+          <div class="about-section-box">
+            <h4>Special Interest Groups (SIGs)</h4>
+            <p>Special Interest Groups are groups that have an interest in something
+              special. Special things include stuff. The SIGS are interested in this 
+              stuff and are intrigued by it. Maybe they're not. But maybe they are.
+            </p>
+          </div>
+          <div class="about-section-box">
+            <h4>Major Events</h4>
+            <p>There are a number of major events that take place at Missouri S&T 
+              throughout the year. These events include MinerLAN, MegaMinerAI, and
+              other stuff that happens. This stuff happens at some times in the year.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- This is where upcoming events are automatically added -->
     {% include "home/upcoming-events.html" %}
     <div class="content-wrapper">
