CHANGED format of events on index, fixed dead links on /events/

--- a/ACM_General/events/templates/events/listEvents.html
+++ b/ACM_General/events/templates/events/listEvents.html
@@ -11,8 +11,8 @@
           {% if event.is_active %}
     <div class="event-wrapper">
       <div class="event-card">
-        <a class="flier-space" href="{{ event.flier.url }}">
-          <img src="{{ event.flier.url }}">
+        <a class="flier-space" href="../{{ event.flier.url }}">
+          <img src="../{{ event.flier.url }}">
         </a>
         <div class="flier-info">
           <h2>{{ event.title }}</h2>
