--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -15,10 +15,11 @@
 
 .event-card {
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 0;
   width: 100%;
+  height: 200px;
   box-sizing: content-box;
-  max-width: 1000px;
+  max-width: 800px;
   display: flex;
 }
 
@@ -37,7 +38,7 @@
 }
 
 .flier-space img {
-  height: 400px;
+  height: 200px;
   flex-shrink: 0;
 }
 
@@ -56,18 +57,21 @@
   flex: 1 1 auto;
   justify-content: center;
   margin-left: 20px;
+  padding: 20px 0;
 }
 
 .flier-info h2 {
   color: rgba(0, 0, 0, .87);
   font-weight: normal;
-  line-height: 25px;
+  line-height: 30px;
+  margin: 0;
 }
 
 .flier-info p {
   color: rgba(0, 0, 0, .70);
   font-size: 16px;
-  margin-bottom: 35px;
+  height: 72px;
+  margin: 10px 0;
 }
 
 iframe:before {
@@ -87,7 +91,7 @@ iframe:before {
   position: relative;
   width: 100%;
   padding-top: 68%;
-  margin-bottom: 40px;
+  margin-bottom: 15px;
 }
 
 iframe {
@@ -104,7 +108,27 @@ iframe {
   width: 90%;
   height: 550px;
   margin: 0 auto;
-  margin-bottom: 40px;
+  margin: 15px 0;
+}
+
+.events-link {
+  display: block;
+  padding: 10px 0;
+  margin: 15px 15px;
+  text-align: center;
+  font-size: 1.15em;
+  font-weight: bold;
+  color: #76d3ab;
+  text-decoration: none;
+  border-radius: 4px;
+  background: rgba(0,0,0,0.06);
+  transition: all 150ms ease-in-out;
+}
+
+.events-link:hover {
+  text-decoration: underline;
+  color: #67bd98;
+  background: rgba(0,0,0,0.1);
 }
 
 @media (max-width: 641px) {
