--- a/ACM_General/home/templates/home/upcoming-events.html
+++ b/ACM_General/home/templates/home/upcoming-events.html
@@ -8,14 +8,12 @@
             </a>
             <div class="flier-info">
                 <h2>{{ event.title }}</h2>
-                <p>{{ event.description }}</p>
-                {% if event.link %}
-                    <div><a href="{{ event.link }}" class="acm-btn">Learn More</a></div>
-                {% endif %}
+                <p>{{ event.description|truncatechars:100 }}</p>
+                <div><a href="{% url "events:events-list" %}" class="acm-btn">See More</a></div>
             </div>
         </div>
     </div>
 {% endfor %}
 {% if num_events > 2 %}
-    <a href="">More Events</a>
+<a href="{% url "events:events-list" %}" class="events-link">More Events</a>
 {% endif %}
