--- a/ACM_General/events/static/events/css/list-events.css
+++ b/ACM_General/events/static/events/css/list-events.css
@@ -57,7 +57,7 @@
 .flier-info p {
   color: rgba(0, 0, 0, 0.7);
   font-size: 16px;
-  margin-bottom: 35px; }
+  margin-bottom: 0; }
 
 iframe:before {
   position: relative;
