--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -17,7 +17,7 @@
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  height: 200px;
+  height: 220px;
   box-sizing: content-box;
   max-width: 800px;
   display: flex;
@@ -38,7 +38,9 @@
 }
 
 .flier-space img {
-  height: 200px;
+  height: 220px;
+  padding: 10px 0;
+  margin: 0;
   flex-shrink: 0;
 }
 
