--- a/ACM_General/events/static/events/css/list-events.css
+++ b/ACM_General/events/static/events/css/list-events.css
@@ -74,22 +74,23 @@ iframe:before {
   position: relative;
   width: 100%;
   padding-top: 68%;
-  margin-bottom: 15px; }
+  margin: 15px auto;
+}
 
 iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 .agenda-wrapper {
   display: none !important;
   position: relative;
   width: 90%;
   height: 550px;
-  margin: 0 auto;
-  margin: 15px 0; }
+  margin: 15px auto; }
 
 .events-link {
   display: block;
