--- a/ACM_General/events/templates/events/listEvents.html
+++ b/ACM_General/events/templates/events/listEvents.html
@@ -8,11 +8,11 @@
 
 {% block body_content %}
   <main>
-        {% for event in eventsList %}
-          {% if event.is_active %}
-    <a name="{{ event.title | hyphenate }}"></a>
+  {% for event in eventsList %}
+    {% if event.is_active %}
     <div class="event-wrapper">
       <div class="event-card">
+        <a name="{{ event.title | hyphenate }}"></a>
         <a class="flier-space" href="../{{ event.flier.url }}">
           <img src="../{{ event.flier.url }}">
         </a>
@@ -31,7 +31,16 @@
         </div>
       </div>
     </div>
-          {% endif %}
-        {% endfor %}
+    {% endif %}
+  {% endfor %}
+    <div class="content-wrapper">
+      <div class="calendar-wrapper">
+        <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;height=100&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FChicago" style="border: 0" frameborder="0" scrolling="no"></iframe>
+      </div>
+      <div class="agenda-wrapper">
+        <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;scroll=no&amp;src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FChicago" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      </div>
+      <a class="events-link" href="">Previous Events</a>
+    </div>
   </main>
 {% endblock %}
