Added messages and created a few cases in login

--- a/ACM_General/core/templates/core/wireframe.html
+++ b/ACM_General/core/templates/core/wireframe.html
@@ -54,6 +54,7 @@
 <body>
 {% block body_header %}{% endblock %}
 {% block body_navigation %}{% endblock %}
+{% block body_messages %}{% endblock %}
 {% block body_content %}{% endblock %}
 {% block body_footer %}{% endblock %}
 {% block body_scripts %}{% endblock %}
