--- a/ACM_General/home/static/home/scss/main.scss
+++ b/ACM_General/home/static/home/scss/main.scss
@@ -393,6 +393,39 @@ label:focus {
   transform: translate3d(0, 0, 0);
   box-shadow: 0 0 8px rgba(0, 0, 0, .45);
 }
+/* =========================================================================
+ * Messages
+ * ========================================================================= */
+
+.messages {
+  display: block;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.alert {
+  height: 60px;
+  // border-radius: 10px;
+  text-align: center;
+  line-height: 60px;
+  margin: 10px;
+  border: 2px solid lightgray;
+  font-size: 1.05em;
+}
+
+.alert-warning {
+}
+
+.alert-success {
+  background: rgba(118, 211, 171, 0.5);
+  color: rgb(68, 161, 121);
+}
+
+.alert-error {
+  background: rgba(242, 70, 50, 0.5);
+  color: rgb(232, 60, 40);
+}
 
 /* =========================================================================
  * Page Modifications
