--- a/ACM_General/home/templates/home/base.html
+++ b/ACM_General/home/templates/home/base.html
@@ -148,15 +148,17 @@
 
 {% block body_messages %}
 {% if messages %}
-<ul class="messages">
-    {% for msg in messages %}       
-    <li>
-        <div class="alert alert-{{msg.level_tag}}" role="alert">
-        {{msg.message}}
-        </div>
-    </li>
-    {% endfor %}
-</ul>
+<div class="content-wrapper">
+  <ul class="messages">
+      {% for msg in messages %}       
+      <li>
+          <div class="alert alert-{{msg.level_tag}}" role="alert">
+          {{msg.message}}
+          </div>
+      </li>
+      {% endfor %}
+  </ul>
+</div>
 {% endif %}
 {% endblock %}
 
