--- a/ACM_General/home/templates/home/upcoming-events.html
+++ b/ACM_General/home/templates/home/upcoming-events.html
@@ -17,6 +17,6 @@
 {% endfor %}
 {% if num_events > 2 %}
 <div class="content-wrapper">
-  <a href="{% url "events:events-list" %}" class="events-link">More Events</a>
+  <a href="{% url "events:events-list" %}" class="events-link acm-btn">More Events</a>
 </div>
 {% endif %}
