--- a/ACM_General/events/static/events/css/list-events.css
+++ b/ACM_General/events/static/events/css/list-events.css
@@ -94,21 +94,17 @@ iframe {
 
 .events-link {
   display: block;
-  padding: 10px 0;
-  margin: 15px 15px;
-  text-align: center;
-  font-size: 1.15em;
+  height: 60px;
+  line-height: 60px;
+  margin: 15px 0;
   font-weight: bold;
-  color: #76d3ab;
-  text-decoration: none;
-  border-radius: 4px;
-  background: rgba(0, 0, 0, 0.06);
-  transition: all 150ms ease-in-out; }
+  background: #288ebf;
+  box-shadow: inset 0 -6px 0 0 #227aa4;
+}
 
 .events-link:hover {
-  text-decoration: underline;
-  color: #67bd98;
-  background: rgba(0, 0, 0, 0.1); }
+  box-shadow: inset 0 -60px 0 0 #227aa4;
+}
 
 @media (max-width: 641px) {
   /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
@@ -145,7 +141,12 @@ iframe {
 
   .flier-space {
     height: 400px;
-    margin-right: 0; } }
+    margin-right: 0; }
+
+  .flier-info div {
+    margin: 0 15px;
+  }
+}
 @media (max-width: 750px) {
   .calendar-wrapper {
     display: none !important; }
