--- a/ACM_General/events/templates/events/listEvents.html
+++ b/ACM_General/events/templates/events/listEvents.html
@@ -18,7 +18,7 @@
         </a>
         <div class="flier-info">
           <h2>{{ event.title }}</h2>
-          <p>{{ event.description | truncatechars:120 }}</p>
+          <p>{{ event.description | truncatechars:750 }}</p>
           <div>
             <strong>When:</strong> {{ event.date_hosted | date:"m/d/o h:i A" }} CST
             <strong>Where:</strong> {{ event.location }}
@@ -40,7 +40,7 @@
       <div class="agenda-wrapper">
         <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;scroll=no&amp;src=mst.edu_7u3stm8bn7l2umuastep5fmbl0%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FChicago" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       </div>
-      <a class="events-link" href="">Previous Events</a>
+      <!--<a class="events-link acm-btn" href="">Previous Events</a>-->
     </div>
   </main>
 {% endblock %}
