--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -114,22 +114,16 @@ iframe {
 
 .events-link {
   display: block;
-  padding: 10px 0;
-  margin: 15px 15px;
-  text-align: center;
-  font-size: 1.15em;
+  height: 60px;
+  line-height: 60px;
+  margin: 15px 5px;
   font-weight: bold;
-  color: #76d3ab;
-  text-decoration: none;
-  border-radius: 4px;
-  background: rgba(0,0,0,0.06);
-  transition: all 150ms ease-in-out;
+  background: #288ebf;
+  box-shadow: inset 0 -6px 0 0 #227aa4;
 }
 
 .events-link:hover {
-  text-decoration: underline;
-  color: #67bd98;
-  background: rgba(0,0,0,0.1);
+  box-shadow: inset 0 -60px 0 0 #227aa4;
 }
 
 @media (max-width: 641px) {
@@ -174,7 +168,7 @@ iframe {
   }
 
   .flier-space {
-    height: 400px;
+    // height: 400px;
     margin-right: 0;
   }
 }
@@ -233,7 +227,7 @@ html[data-useragent*='MSIE 10.0'] {
   }
 
   .flier-space {
-    height: 400px;
+    // height: 400px;
     margin-right: 0;
   }
 }
